--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+{% block header %}
+    {% if current_user.is_authenticated %}
+        <h5>Nice to see you again, {{ current_user.username }}!</h5>
+    {% else %}
+        <h5>Please Sign Up or Log In to Create New Posts</h5>
+    {% endif %}
+{% endblock %}
 
 {% block title %}Home{% endblock %}
 
