--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -9,7 +9,7 @@
             <a class="nav-link" href="/">Home</a>
             {% if current_user.is_authenticated %}
             <a class="nav-link" href="/add-phone">Add Phone Number</a>
-            <a class="nav-link" href="/log_in">Log Out</a>
+            <a class="nav-link" href="/logout">Log Out</a>
             {% else %}
             <a class="nav-link" href="/log_in">Log In</a>
             <a class="nav-link" href="/sign_up">Sign Up</a>
